creusot/tests/should_fail/terminates/terminates-calls-nonterminate.stderr
error: called program function `i_dont` in program (terminates) context
 --> terminates-calls-nonterminate.rs:7:5
  |
7 |     i_dont();
  |     ^^^^^^

error: aborting due to 1 previous error

